// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DocTest:quote > basic 1`] = `
"<div class="quoteblock">
<blockquote>
Four score and seven years ago our fathers brought forth
on this continent a new nation&#8230;&#8203;
</blockquote>
</div>"
`;

exports[`DocTest:quote > block 1`] = `
"<div class="quoteblock">
<blockquote>
<div class="paragraph">
<p>Dennis: Come and see the violence inherent in the system. Help! Help! I&#8217;m being repressed!</p>
</div>
<div class="paragraph">
<p>King Arthur: Bloody peasant!</p>
</div>
<div class="paragraph">
<p>Dennis: Oh, what a giveaway! Did you hear that? Did you hear that, eh? That&#8217;s what I&#8217;m on about! Did you see him repressing me? You saw him, Didn&#8217;t you?</p>
</div>
</blockquote>
</div>"
`;

exports[`DocTest:quote > with-attribution 1`] = `
"<div class="quoteblock">
<blockquote>
A person who never made a mistake never tried anything new.
</blockquote>
<div class="attribution">
&#8212; Albert Einstein
</div>
</div>"
`;

exports[`DocTest:quote > with-attribution-and-citetitle 1`] = `
"<div class="quoteblock">
<blockquote>
Everybody remember where we parked.
</blockquote>
<div class="attribution">
&#8212; Captain James T. Kirk<br>
<cite>Star Trek IV: The Voyage Home</cite>
</div>
</div>"
`;

exports[`DocTest:quote > with-id-and-role 1`] = `
"<div id="parking" class="quoteblock startrek">
<blockquote>
Everybody remember where we parked.
</blockquote>
</div>"
`;

exports[`DocTest:quote > with-title 1`] = `
"<div class="quoteblock">
<div class="title">After landing the cloaked Klingon bird of prey in Golden Gate park:</div>
<blockquote>
Everybody remember where we parked.
</blockquote>
</div>"
`;
